fix generate token endpoint
