# api/openapi.yaml
@@ -1,15 +1,36 @@
-44F: 3.0.1
+openapi: 3.0.1
 info:
   title: Amor Rendezvous Backend
   description: API for Amor Rendezvous Backend
   version: "1.0"
 servers:
   - url: "http://localhost:8080"
+  
+
 paths:
+  /api/v1/users:
+    post:
+      summary: Create a user account
+      description: Create a user account
+      tags: 
+        - Users
+      operationId: create_user
+      requestBody:
+        $ref: "#/components/requestBodies/UserCreate"
+      responses:
+        "201":
+          $ref: "#/components/responses/CreatedWithIDResponse"
+        "401":
+          $ref: "#/components/responses/unauthorizedError"
+        "400":
+          $ref: "#/components/responses/badRequestError"
+        "500":
+          $ref: "#/components/responses/serverError"
+
 components:
   parameters:
     user-id:
-      name: employee-id
+      name: user-id
       description: "An id, a time-uuid"
       in: path
       required: true
@@ -17,5 +38,88 @@ components:
         type: string
         format: uuid
       example: 724fd412-1f8b-11ec-b0b3-9801a7895a3f
+  responses:
+    unauthorizedError:
+      description: Access token is missing or invalid
+    CreatedWithIDResponse:
+      description: "Response for Successful creation of an object, contains the uuid of the created object."
+      content:
+        application/json:
+          schema:
+            type: string
+            format: uuid
+            example: 724fd412-1f8b-11ec-b0b3-9801a7895a3f
+    createdResponse:
+      description: "Created"
+    successResponse:
+      description: "Request Successful"
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                example: OK
+    badRequestError:
+      description: "Bad Request"
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+                example: bad request
+    notFoundRequestError:
+      description: "Not Found"
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+                example: not found
+    serverError:
+      description: "Error occured on the server. Could be as a result of invalid request"
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+                example: "internal Server Error"
+    requestNotFoundError:
+      description: "File Not found error. Could be as a result bad link or change in path"
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+                example: "File Not Found"
   requestBodies:
-    
+    UserCreate:  
+      content: 
+        application/json:
+          schema:
+            $ref: "#/components/schemas/UserCreate"
+  schemas:
+    UserCreate: 
+      type: object
+      properties:
+        email: 
+          type: string
+          example: "user@gmail.com"
+        first_name: 
+          type: string
+          example: "John"
+        last_name:
+          type: string
+          example: "Doe"
+        password: 
+          type: string
+          example: "userpassword82_"
